[tool.poetry]
name = "cantusdb"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.2.11"
django-autocomplete-light = "3.9.4"
django-extra-views = "0.13.0"
django-quill-editor = "0.1.40"
django-reversion = "5.0.8"
gunicorn = "22.0.0"
psycopg = "3.1.8"
requests = "2.31.0"
ujson = "5.9.0"
volpiano-display-utilities = { git = "https://github.com/DDMAL/volpiano-display-utilities.git", tag = "v1.1.2" }

[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
django_debug_toolbar = "3.8.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
Faker = "4.1.0"
coverage = "5.3.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.4.1"
mypy = "^1.10.0"
pylint = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
