[tool.poetry]
name = "cantusdb"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.2.14"
django-autocomplete-light = "3.9.4"
django-extra-views = "0.13.0"
django-quill-editor = "0.1.40"
django-reversion = "5.0.8"
gunicorn = "22.0.0"
requests = "2.32.2"
ujson = "5.9.0"
volpiano-display-utilities = { git = "https://github.com/DDMAL/volpiano-display-utilities.git", tag = "v1.1.3" }
psycopg = {extras = ["binary"], version = "3.1.18"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django_debug_toolbar = "4.3.0"
Faker = "4.1.0"
coverage = "5.3.1"
black = "^24.4.1"
mypy = "^1.10.0"
pylint = "^2.6.0"
pylint-django = "^2.5.5"
django-stubs = {git = "https://github.com/typeddjango/django-stubs.git", rev = "4a5b0656be5ccfb961e4e32f4a99756eaf57bb1d"}
django-extensions = "^3.2.3"
werkzeug = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
